Abstract_PosterConf_UoB2017

--- a/posters/Research_Poster_Conference_UoB/2017/abstract/main.tex
+++ b/posters/Research_Poster_Conference_UoB/2017/abstract/main.tex
@@ -306,7 +306,7 @@ good
 capability in measuring how well a given participant imitates the humanoid robot.
 With this in mind, we believe that the potential applications of this research
 are many, for instance in the fields of rehabilitation, therapy,
-and entertainment to mention only a few
+and entertainment to mention only a few.
 
 
 %%%%%
