RPC poster uob 2018

--- a/posters/Research_Poster_Conference_UoB/2018/abstract/latex/abstract02.tex
+++ b/posters/Research_Poster_Conference_UoB/2018/abstract/latex/abstract02.tex
@@ -13,19 +13,18 @@ eMOTION: Analysis of Emotion and Movement Variability in the Context of Human-Ro
 } 
 \date{\today}
 
+
+% SHOULD BE 150 words
 \begin{document}
 \maketitle
 
 Movement variability is an inherent feature within and between persons.
 Such movement variability can be seen in many activities where human 
-body movement is involved. For instance, walking patters in the morning
- are generally energetic, however after a working day such walking 
-patterns might slightly change due tiredness where no measurements 
-have been made or in the case of accessing the quality of movement 
+body movement is involved. For instance,
+ in the case of accessing the quality of movement 
 when one person has an injury in a body extremity there is 
 little understanding about how well a person is recovering 
 to his/her original movements.
-
 With that in mind, we hypothesise that not only the subtle 
 variations of face emotions but also simple body movements can be 
 described and quantified in using nonlinear dynamics.
