--- a/posters/Research_Poster_Conference_UoB/2018/abstract/latex/abstract02.tex
+++ b/posters/Research_Poster_Conference_UoB/2018/abstract/latex/abstract02.tex
@@ -18,37 +18,17 @@ eMOTION: Analysis of Emotion and Movement Variability in the Context of Human-Ro
 \begin{document}
 \maketitle
 
-Movement variability is an inherent feature within and between persons.
-Such movement variability can be seen in many activities where human 
-body movement is involved. For instance,
- in the case of accessing the quality of movement 
-when one person has an injury in a body extremity there is 
-little understanding about how well a person is recovering 
-to his/her original movements.
-With that in mind, we hypothesise that not only the subtle 
-variations of face emotions but also simple body movements can be 
-described and quantified in using nonlinear dynamics.
-Nonlinear dynamics is an area of mathematics that helps to 
-understand phenomena where many changing variables are involved 
-such as modelling weather forecast, modelling neural activity or, in our case,
- understanding and measuring movement variability.
-For this work, we therefore explain how the state space reconstruction theorem 
-works (where dynamics of an unknown system can be reconstructed using one dimensional 
-time series) and
-present preliminary results of the use of the state reconstruction
-to understand the relationship between the variability of arm movements, head
-pose estimation and the emotion of six participants in the context of 
-human-robot interactions.
-The results of the state space reconstruction in the context of face emotions 
-lead us to conclude that not only the variability of upper body movement 
-can be analysed and quantified using the state space reconstruction theorem
-but also the subtle variability of face emotion transitions across time 
-(e.g. from excitement to neutral to boredom, etc)
-can be understood and measured using nonlinear dynamics.
-We also present some areas of applications of our results such rehabilitation, 
-neuroscience, sport science, education, artificial intelligence
-to mention but a few.
+Movement variability (MV) is an inherent feature within and between persons.
+Such MV can be seen in many activities where human body movement is involved. 
+So, we hypothesise that not only the subtle 
+variations of face expressions but also simple body movements 
+in the context of human-robot interaction activities
+can be described and quantified 
+using nonlinear dynamics (ND) theorems.
 
-303words
+We therefore explain how the uniform time-delay embedding theorem, a technique of ND, works 
+and present results of our hypothesis where the potential impact can be areas such as 
+rehabilitation, neuroscience or artificial intelligence
+to name a few.
 
 \end{document}
