RPC poster uob 2018 (abstract_v02-final)

--- a/posters/Research_Poster_Conference_UoB/2018/abstract/latex/abstract02.tex
+++ b/posters/Research_Poster_Conference_UoB/2018/abstract/latex/abstract02.tex
@@ -27,8 +27,8 @@ can be described and quantified
 using nonlinear dynamics (ND) theorems.
 
 We therefore explain how the uniform time-delay embedding theorem, a technique of ND, works 
-and present results of our hypothesis where the potential impact can be areas such as 
-rehabilitation, neuroscience or artificial intelligence
-to name a few.
+and present both results of our hypothesis and the potential impact 
+in areas such as 
+rehabilitation, neuroscience or artificial intelligence to name a few.
 
 \end{document}
