RPC poster uob 2018 (abstract_v02 FINAL)

--- a/posters/Research_Poster_Conference_UoB/2018/abstract/latex/abstract02.tex
+++ b/posters/Research_Poster_Conference_UoB/2018/abstract/latex/abstract02.tex
@@ -3,9 +3,7 @@
 
 
 \author{Miguel P Xochicale\\
-% \author{Miguel P Xochicale \qquad Chris Baber \\
 map479@bham.ac.uk \\
-Department of Electronic Engineering\\
 School of Engineering\\
 University of Birmingham, UK}
 \title{
@@ -27,7 +25,7 @@ can be described and quantified
 using nonlinear dynamics (ND) theorems.
 
 We therefore explain how the uniform time-delay embedding theorem, a technique of ND, works 
-and present both results of our hypothesis and the potential impact 
+and present both results of our hypothesis and its potential impact 
 in areas such as 
 rehabilitation, neuroscience or artificial intelligence to name a few.
 
